err/vhpi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vhpi'...
Compiling './lib/python3.5/site-packages/vhpi/__init__.py'...
***   File "./lib/python3.5/site-packages/vhpi/__init__.py", line 30
    example_cfg: str = os.path.abspath(
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vhpi/api'...
Compiling './lib/python3.5/site-packages/vhpi/api/backup.py'...
***   File "./lib/python3.5/site-packages/vhpi/api/backup.py", line 58
    options: List[str] = rsync_options.split()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vhpi/api/job.py'...
***   File "./lib/python3.5/site-packages/vhpi/api/job.py", line 38
    backup_src: str = job_cfg.get('rsync_src')
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vhpi/api/logging.py'...
***   File "./lib/python3.5/site-packages/vhpi/api/logging.py", line 40
    msg: str = time.strftime(const.TIMESTAMP_FORMAT)
       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vhpi/api/main.py'...
***   File "./lib/python3.5/site-packages/vhpi/api/main.py", line 62
    lock: str = _check_lock(f'{const.APP_CFG_DIR}/lock')
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vhpi/api/snapshot.py'...
***   File "./lib/python3.5/site-packages/vhpi/api/snapshot.py", line 33
    backup_root: BackupRoot
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vhpi/api/types.py'...
***   File "./lib/python3.5/site-packages/vhpi/api/types.py", line 49
    exclude_lib: dict
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vhpi/cli'...
Compiling './lib/python3.5/site-packages/vhpi/cli/__init__.py'...
***   File "./lib/python3.5/site-packages/vhpi/cli/__init__.py", line 33
    file=f'{os.path.dirname(__file__)}/interface.txt',
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vhpi/constants.py'...
***   File "./lib/python3.5/site-packages/vhpi/constants.py", line 26
    version: str = get_distribution('vhpi').version or 'none'
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vhpi/examples'...
Listing './lib/python3.5/site-packages/vhpi-2.0.0b12.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
